# archershub-auto-switch

./: .gitignore  README.md  login_requests.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
archershub/: __init__.py  admin.py  api.py  auth.py  catalog.py  cli.py  client.py  console.py  constants.py  course_search.py  crypto.py  env.py  jobs.py  notifications.py  scheduler.py  sections.py  storage.py  switching.py
archershub/bot/: __init__.py  app.py  handlers.py  messages.py  parsing.py  polling.py  service.py
docs/: postgres-migration.md
tests/: test_admin.py  test_auto_switch_helpers.py  test_bot_handlers.py  test_bot_messages.py  test_bot_polling.py  test_bot_storage_jobs.py  test_captcha_escalation.py  test_cli.py  test_client_catalog.py  test_course_search.py
tests_live/: test_read_only_endpoints_live.py
