[tool.poetry]
name = "archershub-endpoint"
version = "0.1.0"
description = "ArchersHub endpoint client and Telegram notification service"
authors = ["Joshua Armaine Gilo <joshua_gilo@dlsu.edu.ph>"]
readme = "README.md"
packages = [{ include = "archershub" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = ">=2.32.0"
beautifulsoup4 = ">=4.12.0"
cryptography = ">=42.0.0"
pillow = ">=10.0.0"
pytesseract = ">=0.3.13"
fastapi = ">=0.110.0"
uvicorn = ">=0.27.0"
python-telegram-bot = { version = ">=22.0,<23.0", extras = ["job-queue"] }

[tool.poetry.scripts]
archershub = "archershub.cli:main"
archershub-admin = "archershub.admin:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
